--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,318 @@
-/* место для вашего кода */
+/* header */
+.header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 92px 24px 96px 24px;
+}
+
+.header__menu {
+  display: flex;
+  padding-left: 27px;
+}
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  list-style: circle;
+  gap: 31px;
+  font-size: 18px;
+  font-style: normal;
+}
+
+.header__links-list-item {
+  text-underline-offset: 4px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+  padding: 1px 10px;
+}
+
+.address {
+  justify-self: end;
+  padding-right: 59px;
+  font-size: 18px;
+  font-style: normal;
+  text-underline-offset: 4px;
+  line-height: 24px;
+}
+
+/* main section - cover */
+.cover {
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  opacity: 0.6;
+  background-color: black;
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 165px 50px 135px 50px;
+}
+
+.aligned-text_left {
+  display: block;
+  line-height: 115px;
+}
+
+.aligned-text_center {
+  display: block;
+  text-align: center;
+  line-height: 100px;
+  padding-top: 20px;
+  padding-right: 70px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  line-height: 100px;
+  padding-top: 20px;
+}
+
+.letter-spacing {
+  letter-spacing: 30px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 51px 78px;
+}
+
+.cover__description-text {
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 12px 31px 11px 32px;
+}
+
+/* main section - lots */
+.lots {
+  padding: 180px 24px 170px 24px;
+}
+
+.lots__heading {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  line-height: 47px;
+  padding: 0 0 27px 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+  padding: 51px 40px 0 40px;
+}
+
+.card__text {
+  bottom: 0;
+  z-index: 1;
+  color: #fff;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 0 40px 48px 40px;
+}
+
+.lots__look-more-link {
+  display: block;
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  max-width: fit-content;
+  margin: 30px 0 0 40px;
+}
+
+/* main section - about */
+.about {
+  display: grid;
+  column-gap: 25px;
+  grid-template-columns: 334px auto;
+  padding: 0 24px;
+}
+
+.about__logo {
+  justify-self: center;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  margin-top: 13px;
+}
+
+.about__logo-image {
+  padding: 64px 45px 62px 46px;
+}
+
+.about__title {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+  margin-top: 114px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+/* footer */
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 180px 50px 88px 50px;
+}
+
+.footer__address {
+  justify-self: start;
+}
+
+.footer__menu {
+  justify-self: center;
+  align-content: stretch;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  list-style-type: none;
+}
+
+.footer__menu-list-item {
+  align-self: center;
+}
+
+.footer__menu-link {
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+  pointer-events: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: end;
+  align-self: stretch;
+  column-gap: 48px;
+  list-style-type: none;
+}
+
+.footer__social-link {
+  display: flex;
+  width: 48px;
+}
+
+.footer__social-icon {
+  object-fit: contain;
+}
