Minor edits. Alignment.

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
   list-style: circle;
   gap: 31px;
   font-size: 18px;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -39,6 +40,7 @@
   justify-self: end;
   padding-right: 59px;
   font-size: 18px;
+  font-weight: 400;
   font-style: normal;
   text-underline-offset: 4px;
   line-height: 24px;
@@ -66,7 +68,7 @@
   font-size: 100px;
   font-weight: 700;
   text-transform: uppercase;
-  padding: 165px 50px 135px 50px;
+  padding: 165px 50px 133px 50px;
 }
 
 .aligned-text_left {
@@ -112,8 +114,8 @@
 
 .cover__description-text {
   color: #fff;
-  font-weight: 400;
   font-size: 22px;
+  font-weight: 400;
   text-align: center;
   text-transform: uppercase;
   word-spacing: 18px;
@@ -122,8 +124,8 @@
 .bet-button {
   border: 1px solid #fff;
   color: #fff;
-  font-weight: 400;
   font-size: 22px;
+  font-weight: 400;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
@@ -133,7 +135,7 @@
 
 /* main section - lots */
 .lots {
-  padding: 180px 24px 170px 24px;
+  padding: 180px 24px 168px 24px;
 }
 
 .lots__heading {
@@ -189,8 +191,8 @@
   position: relative;
   z-index: 1;
   color: #fff;
-  font-weight: 700;
   font-size: 22px;
+  font-weight: 700;
   line-height: 120%;
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
@@ -203,8 +205,8 @@
   bottom: 0;
   z-index: 1;
   color: #fff;
-  font-weight: 400;
   font-size: 20px;
+  font-weight: 400;
   line-height: 24px;
   padding: 0 40px 48px 40px;
 }
@@ -212,8 +214,8 @@
 .lots__look-more-link {
   display: block;
   color: #000;
-  font-weight: 400;
   font-size: 20px;
+  font-weight: 400;
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
   text-underline-offset: 5px;
@@ -244,8 +246,8 @@
 
 .about__title {
   color: #000;
-  font-weight: 700;
   font-size: 40px;
+  font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 100px;
   margin-top: 114px;
@@ -254,18 +256,18 @@
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 30px;
   color: #000;
-  font-weight: 400;
   font-size: 20px;
+  font-weight: 400;
   line-height: 24px;
+  gap: 25px;
 }
 
 /* footer */
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 180px 50px 88px 50px;
+  padding: 179px 50px 88px 50px;
 }
 
 .footer__address {
@@ -280,8 +282,8 @@
 .footer__menu-list {
   display: flex;
   flex-direction: column;
-  font-weight: 400;
   font-size: 18px;
+  font-weight: 400;
   font-style: normal;
   list-style-type: none;
 }
@@ -296,7 +298,7 @@
 }
 
 .footer__menu-link_active {
-  text-decoration: none;
+  list-style: none;
   pointer-events: none;
 }
 
